log
Sat Apr  9 23:35:10 HSP 2022: 
 hashmap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
test.c: In function 'enlarge_test':
test.c:438:47: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
             if(map->buckets[i]==NULL) sprintf(msg,"%.100s(null)  ",msg);
                                               ^~~                  ~~~
test.c:439:26: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
             else sprintf(msg,"%.100s%s  ", msg, (char*)map->buckets[i]->value);
                          ^~~               ~~~
test.c:442:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.100s\nbut should be: \nvalue3  (null)  (null)  (null)  value4  (null)  value2  value1  value0  (null)  (null)  (null)  value5  (null)  (null)  (null)  (null)  (null)  (null)  (null)",msg);
                 ^~~                                                                                                                                                                                           ~~~
cc1.exe: all warnings being treated as errors
Compilation failed
08f2963
Sun Apr 10 14:46:50 HSP 2022: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
test.c: In function 'enlarge_test':
test.c:438:47: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
             if(map->buckets[i]==NULL) sprintf(msg,"%.100s(null)  ",msg);
                                               ^~~                  ~~~
test.c:439:26: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
             else sprintf(msg,"%.100s%s  ", msg, (char*)map->buckets[i]->value);
                          ^~~               ~~~
test.c:442:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.100s\nbut should be: \nvalue3  (null)  (null)  (null)  value4  (null)  value2  value1  value0  (null)  (null)  (null)  value5  (null)  (null)  (null)  (null)  (null)  (null)  (null)",msg);
                 ^~~                                                                                                                                                                                           ~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3fbe998
Sun Apr 10 14:54:05 HSP 2022: 
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
test.c: In function 'enlarge_test':
test.c:438:47: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
             if(map->buckets[i]==NULL) sprintf(msg,"%.100s(null)  ",msg);
                                               ^~~                  ~~~
test.c:439:26: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
             else sprintf(msg,"%.100s%s  ", msg, (char*)map->buckets[i]->value);
                          ^~~               ~~~
test.c:442:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.100s\nbut should be: \nvalue3  (null)  (null)  (null)  value4  (null)  value2  value1  value0  (null)  (null)  (null)  value5  (null)  (null)  (null)  (null)  (null)  (null)  (null)",msg);
                 ^~~                                                                                                                                                                                           ~~~
cc1.exe: all warnings being treated as errors
Compilation failed
216de87
